--- a/css/main.css
+++ b/css/main.css
@@ -6,15 +6,7 @@ h1 {
 }
 
 
-
 h2 {
-  display: block;
-  font-size: 30px;
-  text-align: center;
-}
-
-
-h3 {
   display: block;
   background-color: #828181;
   font-size: 2em;
@@ -22,10 +14,18 @@ h3 {
   color: white;
 }
 
+h3 {
+  font-size: 1.5em;
+  display: block;
+  text-align: center;
+  color: #828181;
+  margin: 2em;
+}
+
+
 p {
   margin: 2em;
   display: block;
-  font-size: 1.5em;
   text-align: center;
 }
 
